[package]
name = "patternfly-yew"
version = "0.5.0-alpha.3"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
description = "PatternFly 4 components for Yew"
repository = "https://github.com/patternfly-yew/patternfly-yew"
categories = ["wasm", "web-programming", "gui"]
keywords = ["yew", "patternfly", "web", "html"]
readme = "README.md"
rust-version = "1.65"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["wasmbind", "clock"] }
gloo-events = "0.1.2"
gloo-timers = "0.2.4"
gloo-utils = "0.1.4"
js-sys = "0.3.64"
log = "0.4"
popper-rs = { version = "0.1.0", features = ["yew"] }
serde = "1"
serde_json = "1"
strum = "0.25.0"
strum_macros = "0.25.0"
uuid = { version = "1", features = ["v4", "js"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
yew = "0.20"
yew-hooks = "0.2"
yew-nested-router = { version = "0.3.0", optional = true }

web-sys = { version = "0.3", features = [
    "HtmlCollection",
    "Node",
    "NodeList",
    "DomRect",
    "DomTokenList",
    "HtmlSelectElement",
    "HtmlOptionElement",
    "HtmlOptionsCollection",
    "KeyboardEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
] }
num-traits = "0.2.16"

[features]
default = ["router"]
router = ["yew-nested-router"]

experimental = ["tree"]
tree = []

# Enable FontAwesome regular (FAR) and/or brand (FAB) icons, remember to import the font in your application
icons-far = []
icons-fab = []

[patch.crates-io]
#yew-nested-router = { path = "../yew-nested-router" }
#yew-nested-router = { git = "https://github.com/ctron/yew-nested-router", rev = "9bfba658e85d035fc45989290d3cc1b67c3f12a5" }
#popper-rs = { git = "https://github.com/ctron/popper-rs", rev = "460da6799da78bf5034ab090abd28e47ea76d001" }
