[package]
name = "patternfly-yew"
version = "0.6.1"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
description = "PatternFly 5 components for Yew"
repository = "https://github.com/patternfly-yew/patternfly-yew"
categories = ["wasm", "web-programming", "gui"]
keywords = ["yew", "patternfly", "web", "html"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["wasmbind", "clock"] }
gloo-events = "0.2.0"
gloo-timers = "0.3.0"
gloo-utils = "0.2.0"
implicit-clone = "0.4"
js-sys = "0.3.64"
log = "0.4"
num-traits = "0.2.16"
popper-rs = { version = "0.3.0", features = ["yew"] }
serde = "1"
serde_json = "1"
strum = "0.26"
strum_macros = "0.26"
uuid = { version = "1", features = ["v4", "js"] }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
web-tools = { version = "0.2.3", features = ["yew"] }
yew = "0.21"
yew-hooks = "0.3"
yew-more-hooks = { version = "0.3.3", features = ["breakpoint"] }

yew-nested-router = { version = "0.7.0", optional = true }

web-sys = { version = "0.3.66", features = [
    "HtmlCollection",
    "Node",
    "NodeList",
    "DomRect",
    "DomTokenList",
    "HtmlFormElement",
    "HtmlSelectElement",
    "HtmlOptionElement",
    "HtmlOptionsCollection",
    "KeyboardEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
] }


[features]
default = ["yew-nested-router"]

# things which go away any minute
legacy = []

experimental = ["tree"]
tree = []

# Enable FontAwesome regular (FAR) and/or brand (FAB) icons, remember to import the font in your application
icons-far = []
icons-fab = []

[patch.crates-io]
#yew-nested-router = { path = "../yew-nested-router" }
#yew-nested-router = { git = "https://github.com/ctron/yew-nested-router", rev = "9bfba658e85d035fc45989290d3cc1b67c3f12a5" }
#popper-rs = { git = "https://github.com/ctron/popper-rs", rev = "460da6799da78bf5034ab090abd28e47ea76d001" }
#yew-hooks = { git = "https://github.com/ctron/yew-hooks", rev = "0ba4f5c5f331650b1608ad830dfac0ef63700e8d" }
